Prevent button overflow, scroll to element and make html element position fixed (#9)
* scroll to step and make position html element fixed

* add min width to prevent button overflow

--- a/src/component/telemachy.component.css
+++ b/src/component/telemachy.component.css
@@ -7,6 +7,7 @@
 }
 .explanation {
 	position: absolute;
+	min-width: 220px;
 	z-index: 9000000;
 	transition: all 0.25s ease;
 	border-width: 1px;
@@ -23,7 +24,7 @@
 }
 
 .popup {
-	position: absolute;
+	position: fixed;
 	width: 50%;
 	left: 25%;
 	top: 35vh;
